# nrf-aes-gcm

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: lib.rs
